--- a/src/styles/partials/ThemeControls.module.scss
+++ b/src/styles/partials/ThemeControls.module.scss
@@ -1,5 +1,28 @@
-@use "../vars/colours.scss" as *;
-@use "../vars/global.scss" as *;
+@use "../vars/colors.scss" as *;
+@use "../vars/commonStyles.scss" as *;
+
+.themeControl {
+    &__mainBackground {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -2;
+        width: 100%;
+        height: 100%;
+        background: $primary;
+    }
+
+    &__gradientBackground {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background: $bgGradient;
+        opacity: 0.1;
+    }
+}
 
 ul {
     list-style: none;
