--- a/src/styles/partials/aboutMe.module.scss
+++ b/src/styles/partials/aboutMe.module.scss
@@ -1,89 +1,89 @@
-@use "../vars/colours.scss" as *;
-@use "../vars/global.scss" as *;
+@use "../vars/commonStyles.scss" as *;
 
-.description {
-    margin: 0.5rem 2rem;
-}
-
-.description > p {
-    font-size: 1rem;
-    margin: 0;
-    padding: 1rem 1rem;
-    padding-bottom: 0;
-    text-align: justify;
-}
-
-.description > p:nth-child(2) {
-    padding-top: 0;
-}
-
-.profileImgContainer {
-    float: left;
-    width: 250px;
-    @include flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.profileImg {
-    margin: 2rem;
-    padding: 0.2rem;
-    border-radius: 2rem;
-    width: 150px;
-    height: 190px;
-    background: rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 4px 0px $highlight_color;
-    img {
-        width: 150px;
-        border-radius: 2rem;
-        object-fit: contain;
-    }
-}
-.characters {
-    margin: 0.5rem 0.5rem;
-    @include flex;
-    align-items: flex-start;
-    column-gap: 25px;
+.aboutMe {
     width: 100%;
-    max-width: 1200px;
-    flex-wrap: wrap;
-    div {
+    max-width: 800px;
+    height: auto;
+    margin: 0 auto;
+    padding-top: 3rem;
+    &__header {
+        text-align: center;
+    }
+
+    &__picCharContainer {
+        float: left;
+        width: 250px;
         @include flex;
         flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    &__picture {
+        margin: 2rem;
+        border-radius: 2rem;
+        width: 150px;
+        height: 190px;
+        background: rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 0px 4px 0px $highlight_color;
+        object-fit: contain;
+    }
+
+    &__characters {
+        margin: 0 0.5rem;
+        @include flex;
+        align-items: flex-start;
+        column-gap: 25px;
+        width: 100%;
+        max-width: 1200px;
+        flex-wrap: wrap;
+    }
+
+    &__paragraph {
+        font-size: 1rem;
+        margin: 0;
+        padding: 1rem 1rem;
+        padding-bottom: 0;
+        text-align: justify;
+    }
+}
+
+.character {
+    @include flex;
+    flex-direction: column;
+    width: 50px;
+    margin: 0;
+    padding: 0;
+
+    &__icon {
+        height: 50px;
+        box-sizing: border-box;
         width: 50px;
-        div {
-            height: 50px;
-            width: 50px;
-            // background: $highlight_color;
-            border-radius: 10px;
-            box-shadow: 0 0 4px 0px $text-primary;
-        }
-        p {
-            margin-top: 0.5rem;
-            font-size: 10px;
-            font-weight: 700;
-            text-align: center;
-        }
+        border-radius: 10px;
+        box-shadow: 0 0 4px 0px $text-primary;
+        text-align: center;
+        padding-top: 7px;
+    }
+
+    &__name {
+        margin-top: 0.5rem;
+        font-size: 10px;
+        font-weight: 700;
+        text-align: center;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .description {
+    .aboutMe {
         @include flex;
         flex-direction: column;
     }
-    .description > :nth-child(1) {
+    .aboutMe > :nth-child(1) {
+        order: -2;
+    }
+    .aboutMe > :nth-child(2) {
         order: 0;
     }
-    .description > :nth-child(2) {
+    .aboutMe > :nth-child(3) {
         order: -1;
     }
-    .profileImgContainer {
-        float: none;
-        width: 100%;
-    }
-}
-
-.hidden {
-    @include hide;
 }
