--- a/src/styles/partials/knowledge.module.scss
+++ b/src/styles/partials/knowledge.module.scss
@@ -1,5 +1,5 @@
-@use "../vars/colours.scss" as *;
-@use "../vars/global.scss" as *;
+@use "../vars/colors.scss" as *;
+@use "../vars/commonStyles.scss" as *;
 
 .mainSection h2 {
     font-size: 1.5rem;
