--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,6 @@
-@use "./vars/colours.scss" as *;
-@use "./vars/global.scss" as *;
+@use "./vars/commonStyles.scss" as *;
 
-html,
-body {
+#root {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -16,25 +14,4 @@ body {
     height: auto;
     color: $text-primary;
     cursor: default;
-}
-
-#background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -2;
-    width: 100%;
-    height: 100%;
-    background: $primary;
-}
-
-#gradientBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background: $bgGradient;
-    opacity: 0.1;
 }
