style adjusted to BEM

--- a/src/styles/partials/knowledge.module.scss
+++ b/src/styles/partials/knowledge.module.scss
@@ -1,99 +1,78 @@
 @use "../vars/colors.scss" as *;
 @use "../vars/commonStyles.scss" as *;
 
-.mainSection h2 {
-    font-size: 1.5rem;
-    color: $highlight_color;
-    text-align: center;
-    text-shadow: 0 0 1px rgb(0, 0, 0);
-    margin: 0;
-    margin-bottom: 0.5rem;
-}
-
-.technologyBlock {
+.skills {
     width: 100%;
-    margin: 25px 0;
-    @include flex;
-    flex-direction: row;
-}
-
-.technologyBlock h3 {
-    margin: 0;
-}
-
-.technologyBlockLangs {
-    @include flex;
-    flex-shrink: 0;
-    width: 200px;
-    flex-wrap: wrap;
-    padding: 0;
-    gap: 1rem;
-}
-
-.technologyBlockDescription {
-    margin: 0 25px;
-}
-
-.langsContainer {
-    text-decoration: none;
-    box-sizing: border-box;
-    padding-top: 5px;
-    height: 80px;
-    width: 80px;
-    border-radius: 10px;
-    box-shadow: 0 0 4px 0px $text-primary;
-    text-align: center;
-    color: $highlight_color;
-    font-size: 0.7rem;
-    transition: transform 0.2s;
-    position: relative;
-}
-
-.langsContainer.inProgress {
-    background: linear-gradient(0deg, rgb(175, 0, 0), rgba(255, 255, 255, 0));
-    // opacity: 0.7;
-    position: relative;
-}
-
-.technologyBlockLangs p {
-    position: absolute;
+    max-width: 800px;
+    height: auto;
     margin: 0 auto;
-    bottom: 3px;
-    left: 0;
-    right: 0;
-    font-weight: 700;
-    color: $text-primary;
-}
+    padding-top: 3rem;
 
-.langsContainer:hover {
-    transform: scale(1.2);
-}
-
-.langsContainer.inProgress:hover {
-    background: linear-gradient(0deg, rgb(175, 0, 0), rgba(255, 255, 255, 0));
-}
-
-.langsContainer.inProgress:hover::after {
-    content: "IN PROGRESS";
-    position: absolute;
-    background: rgba(0, 0, 0, 0.9);
-    color: white;
-}
-
-@media screen and (max-width: 480px) {
-    .technologyBlock {
-        flex-direction: column;
-    }
-    .technologyBlockLangs {
-        width: 100%;
-        flex-wrap: wrap;
-    }
-
-    .technologyBlockDescription h3 {
-        margin-top: 10px;
+    &__header {
         text-align: center;
     }
 }
-.hidden {
-    @include hide;
+
+.skill {
+    @include flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 3rem 0;
+
+    &__pictures {
+        @include flex;
+        flex-wrap: wrap;
+        flex-shrink: 0;
+        gap: 1rem;
+        width: 200px;
+        padding: 0;
+    }
+
+    &__picture {
+        box-sizing: border-box;
+        position: relative;
+        width: 80px;
+        height: 80px;
+        margin: 0;
+        padding-top: 5px;
+        border-radius: 10px;
+        box-shadow: 0 0 4px 0px $text-primary;
+        font-size: 0.7rem;
+        color: $highlight_color;
+        text-align: center;
+        text-decoration: none;
+        transition: transform 0.2s;
+
+        p {
+            position: absolute;
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+            bottom: 3px;
+            font-weight: 700;
+            color: $text-primary;
+        }
+    }
+    &__description {
+        padding: 0 1rem;
+    }
+
+    &__header {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .skill {
+        flex-direction: column;
+
+        &__pictures {
+            width: 100%;
+        }
+
+        &__header {
+            margin-top: 10px;
+            text-align: center;
+        }
+    }
 }
