--- a/src/styles/vars/commonStyles.scss
+++ b/src/styles/vars/commonStyles.scss
@@ -133,6 +133,7 @@ h1::after {
 .btn {
     margin: 1rem;
     padding: 1rem;
+    width: fit-content;
     color: $text-primary;
     background: $secondary;
     border-radius: 0.5rem;
@@ -154,7 +155,6 @@ h1::after {
 
 .btn:hover {
     background: $highlight_color_darken;
-    // box-shadow: 0 0 2px 1px $highlight_color_darken;
 }
 
 .popupNavPrev,
