--- a/src/styles/partials/popup.module.scss
+++ b/src/styles/partials/popup.module.scss
@@ -1,7 +1,6 @@
-@use "../vars/colors.scss" as *;
 @use "../vars/commonStyles.scss" as *;
 
-.popupBg {
+.popup {
     position: fixed;
     top: 0;
     left: 0;
