--- a/src/styles/partials/myWork.module.scss
+++ b/src/styles/partials/myWork.module.scss
@@ -14,7 +14,7 @@
     &__projectsContainer {
         @include flex;
         flex-wrap: wrap;
-        column-gap: 1rem;
+        column-gap: 2rem;
         row-gap: 3rem;
         margin: 1rem;
         margin-bottom: 3rem;
@@ -37,6 +37,9 @@
 
     &__paragraph {
         text-align: justify;
+    }
+    &__list {
+        list-style: disc;
     }
 
     &__buttonsContainer {
