--- a/src/styles/partials/tenziDescription.module.scss
+++ b/src/styles/partials/tenziDescription.module.scss
@@ -6,24 +6,33 @@
     padding: 1rem;
 }
 
-.header {
-    width: 100%;
-    background: $primary;
+.navbar {
     position: fixed;
-    padding: 10px 0;
-    height: 20px;
     top: 0;
     left: 0;
-    z-index: 98;
+    width: 100%;
+    height: 20px;
+    padding: 10px 0;
+    background: $primary;
     text-align: center;
+    z-index: 98;
+
+    &__header {
+        margin: 0;
+        padding: 0;
+    }
+
+    &__backBtn {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-weight: 700;
+        z-index: 100;
+        cursor: pointer;
+    }
 }
 
-.header h5 {
-    margin: 0;
-    padding: 0;
-}
-
-.header::after {
+.navbar::after {
     content: "";
     position: absolute;
     left: 0;
@@ -33,58 +42,110 @@
     background: $highlight_color;
 }
 
-.backBtn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 100;
-    font-weight: 700;
-    cursor: pointer;
-}
 .backBtn:hover {
     color: $highlight_color_darken;
 }
 
-.appShotsContainer {
-    margin-top: 50px;
-    @include flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    max-width: 600px;
-}
-.appShotsContainer p {
-    margin: 0;
-}
-
-.appShotsContainer img {
-    width: 150px;
-    height: 150px;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 4px 0px $highlight_color;
-    border-radius: 0.2rem;
-    padding: 0.5rem;
-    cursor: zoom-in;
-}
-
-.globalDiagram {
-    margin: 1rem;
+.diagram {
     @include flex;
     flex-direction: column;
+    margin: 1rem;
+
+    &__paragraph {
+        max-width: 680px;
+        margin-top: 0;
+    }
+
+    &__picture {
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        max-width: 100%;
+        max-height: 60dvh;
+        background: rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 4px 0px $highlight_color;
+        cursor: zoom-in;
+    }
 }
 
-.globalDiagram p {
-    max-width: 680px;
-    margin-top: 0;
+.cardsContainer {
+    @include flex;
+    flex-wrap: wrap;
+    gap: 2em;
+    width: 100%;
 }
 
-.globalDiagram > img {
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    max-width: 100%;
-    max-height: 60dvh;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 4px 0px $highlight_color;
-    cursor: zoom-in;
+.card {
+    @include flex;
+    position: relative;
+    width: 15em;
+    height: 10em;
+    margin: 0;
+
+    &__content {
+        box-sizing: border-box;
+        padding: 2.5em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 98%;
+        height: 98%;
+        transform: translate(-50%, -50%);
+        background-image: $bgGradient;
+        background-size: 1200% 1100%;
+        background-position: center;
+        border-radius: 1em;
+        @include flex;
+        flex-direction: column;
+        text-decoration: none;
+    }
+
+    &__content:hover {
+        background: $highlight_color_darken;
+        cursor: pointer;
+        box-shadow: 0 0 6px 0 $highlight_color;
+    }
+
+    &__icon {
+        font-size: 4em;
+        color: $highlight_color;
+        margin-bottom: 0.5em;
+        position: relative;
+    }
+
+    &__description {
+        padding: 0;
+        margin: 0;
+        font-size: 1rem;
+        font-weight: 700;
+        color: $text-primary;
+        margin-bottom: 0.5em;
+    }
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(0deg, $primary, $highlight_color);
+    border-radius: 1.2em;
+    z-index: 0;
+}
+
+//old ->
+
+.frontEnd {
+    @include flex;
+    flex-direction: column;
+    margin: 1rem;
+
+    &__header {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .branchSection {
