--- a/src/styles/vars/commonStyles.scss
+++ b/src/styles/vars/commonStyles.scss
@@ -103,8 +103,10 @@ h1::after {
     display: none;
     position: fixed;
     z-index: 9999;
-    width: 100dvw;
-    height: 100dvh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background: rgba(0, 0, 0, 0.9);
     background-size: contain;
     background-repeat: no-repeat no-repeat;
