--- a/src/styles/partials/ThemeControls.module.scss
+++ b/src/styles/partials/ThemeControls.module.scss
@@ -1,4 +1,3 @@
-@use "../vars/colors.scss" as *;
 @use "../vars/commonStyles.scss" as *;
 
 .themeControl {
@@ -67,7 +66,7 @@ ul {
 }
 
 .themeBtn:hover {
-    background: $highlight_color;
+    background: $highlight_color_darken;
 }
 
 .color {
@@ -96,6 +95,11 @@ ul {
 .color4 {
     background: #4cff5e;
     color: #189f21;
+}
+
+.color5 {
+    background: $text-primary;
+    color: $text-secondary;
 }
 
 .color,
