--- a/src/styles/partials/myWork.module.scss
+++ b/src/styles/partials/myWork.module.scss
@@ -75,7 +75,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 200px;
         margin: 0;
         box-sizing: border-box;
         background: linear-gradient(
@@ -83,7 +83,8 @@
             rgba(0, 0, 0, 0.9),
             rgba(0, 0, 0, 0.7)
         );
-        border-radius: 1rem;
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
         opacity: 0;
         transition: 0.2s;
         overflow: hidden;
@@ -91,6 +92,11 @@
 
     &__buttonContainer_jsHover {
         opacity: 1;
+    }
+
+    &__btn {
+        margin: 0.3rem;
+        font-size: 0.8rem;
     }
 
     &__name {
