missing key property fixed

--- a/src/styles/vars/commonStyles.scss
+++ b/src/styles/vars/commonStyles.scss
@@ -1,8 +1,8 @@
 .main_darkTheme {
     --primary: #191919;
     --secondary: #111111;
-    --highlight_color: #2d85ff;
-    --highlight_color_darken: #256fd5;
+    --highlight_color: #fff;
+    --highlight_color_darken: #8d8d8d;
     --text-primary: #fff;
     --text-secondary: #8d8d8d;
     --panel: #1e1e1e;
